# IBKRTools

./: .gitignore  .readthedocs.yaml  AccountInfo.py  DataFetchIB.py  DataFetchIB_15s.py  Examples.ipynb  IBKR_Realtime_Data.py  IBTradingUtils.py  LICENSE  README.md  Testing.py  pyproject.toml  pyproject.toml.bak  pytest.ini  setup.cfg  setup.py  utils.py
RealTimeData/Forex/: EUR_USD.csv  GBP_USD.csv
docs/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
examples/: HistoricalData.ipynb
src/: IBKR_Hist.py  IBKR_Realitime_Data.py  utils.py
