[metadata]
description-file = README.md
license_files = LICENSE

[bdist_wheel]
universal = 1

[check-manifest]
ignore =
    .github/*
    .gitignore
    .pre-commit-config.yaml
    .vscode/*
    tests/*
    examples/*
    docs/*
    .coverage
    *.ini
    *.toml
    *.yaml
    *.yml
    *.json

[egg_info]
tag_build = 
tag_date = 0

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    # E402: module level import not at top of file
    __init__.py: F401
    # Allow imports after code in tests
    tests/*.py: E402
    # Allow long lines in tests
    tests/*.py: E501
